--- a/css/styles.css
+++ b/css/styles.css
@@ -1,106 +1,111 @@
 body {
-    font-family: 'Open Sans', sans-serif;
-    box-sizing: border-box;
+  margin: 0;
+  font-family: "Open Sans", sans-serif;
+  box-sizing: border-box;
 }
 
-.produits_container {
-    margin-bottom: 2em;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: row;
+h1 {
+  margin: 0;
 }
 
 .home {
-    background-image: url(images/image_index.jpg);
-    background-size: contain;
-    width: 100%;
-    height: 900px;
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  background: linear-gradient(to bottom, #ce5858, rgba(100, 100, 100, 0)),  url(img/bg3.jpg) no-repeat center fixed;
+  background-size: cover;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  justify-content: center;
 }
 
+body.dark, .dark .home {
+  background: #000;
+}
+
+body.dark, body.dark a {
+  color: #FFF;
+}
+
+.theme_switcher {
+  position: absolute;
+  right: 1em;
+}
 
 .greet {
-    font-size: 50px;
-    color: white;
+  padding-left: 3em;
+  padding-top: 3em;
+  color: #fff;
+}
+
+.greet h1 {
+  font-size: 4em;
+}
+
+.greet ul {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
+}
+
+.greet ul li {
     text-align: center;
 }
 
-.index_a {
-    text-decoration: none;
-    color: white;
+.greet ul li a {
+  color: #fff;
+  text-decoration: none;
 }
 
-.index_a:visited {
-    color: white;
+.produits_container {
+  margin-bottom: 2em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: row;
 }
 
-ul {
-    list-style-type: none;
-}
-
-.libelles_ul {
-    color: red;
-}
-
-.produit_h1 {
-    color: red;
-}
-
-.produits_a {
-    text-decoration: none;
-    color: red;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.produits_a:visited {
-    color: red;
-}
 .produit {
-    max-width: 300px;
-    box-shadow: 0 0 15px 0px #8a8a8a;
-    background-color: white;
+  max-width: 300px;
+  box-shadow: 0 0 15px 0px #8a8a8a;
 }
 
-.produit > .header, .produit > .title {
-    padding: 0.1em 0.5em;
+.produit > .header,
+.produit > .title {
+  padding: 0.1em 0.5em;
 }
 
 .reference {
-    font-size: xx-small;
-    color: #888;
+  font-size: xx-small;
+  color: #888;
 }
 
 .produit > .title {
-    font-weight: bold;
+  font-weight: bold;
 }
 
 .infos {
-    padding: 0.5em;
-    padding-top: 0px;
+  padding: 0.5em;
+  padding-top: 0px;
 }
 
 .price {
-    margin: 0px;
+  margin: 0px;
 }
 
 .description {
-    font-size: small;
+  font-size: small;
 }
 
 .promo {
-    text-transform: uppercase;
-    font-weight: bold;
-    font-size: xx-small;
-    padding: 2px 4px;
-    color: #FFF;
-    background-color: rgb(0, 143, 0);
-}
-
-form {
-    font-size: 20px;
-}
-
-.contact_h1 {
-    text-align: center;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: xx-small;
+  padding: 2px 4px;
+  color: #fff;
+  background-color: rgb(0, 143, 0);
 }
